tests/baselines/reference/parserGenericConstraint4.errors.txt
==== tests/cases/compiler/parserGenericConstraint4.ts (1 errors) ====
    class C<T extends List<List<T> > > {
                      ~~~~
!!! parserGenericConstraint4.ts(1,19): error TS2095: Cannot find name 'List'.
    }